Created Destroy and Partials code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,9 +62,7 @@ p, li { font-size: 1.8em; }
 	<div id="content">
 		<div id="sidebar">
 			<ul>
-				<li>Sidebar stuff.</li>
-				<li>Sidebar stuff.</li>
-				<li>Sidebar stuff.</li>
+				<li><%= link_to "Alpha Blog", articles_path %></li>
 				<li><%= link_to 'About', about_path %> </li>
 			</ul>
 		</div>
