--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,83 +1,4 @@
-
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-	<title>Ruby on Rails Alpha Blog</title>
-	
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	
-	
-<style>
-* {
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	font-size: 62.5%;
-	font-family: Arial, sans-serif;
-	background: url(images/content-bg.png) left repeat-y #d8d3d2;
-}
-
-h1 { font-size: 4.0em; color: #d8d3d2;}
-p, li { font-size: 1.8em; }
-
-.clear { clear: both; }
-
-#header {
-	background: #C53336;
-	padding: 15px 0 15px 15px;
-}
-
-#content {
-	padding: 15px 30px 0 0;
-	}
-	#main-content {
-		margin-left: 175px;
-		max-width: 600px;
-	}
-
-#sidebar {
-	width: 145px;
-	float: left;
-	padding: 0 0 0 15px;
-	}
-	#sidebar ul {
-		list-style: inside;
-	}
-</style>
-
-</head>
-
-<body>
-
-	<div id="header">
-		<h1>Ruby on Rails Alpha Blog</h1>
-		<%= image_tag 'rubyOnRails3.jpg' %>
-
-	</div>
-	
-	<div id="content">
-		<div id="sidebar">
-			<ul>
-				<li><%= link_to "Alpha Blog", articles_path %></li>
-				<li><%= link_to 'About', about_path %> </li>
-			</ul>
-		</div>
-		
-		<div id="main-content">
-			<p>Dolor consuetudium putamus nunc illum at. Qui vel accumsan zzril odio feugait. Iriure nobis aliquam est qui nam. Est ii ad et quod consuetudium. Eu vero tation placerat illum dolore. Suscipit saepius aliquip commodo erat me. Consequat littera autem anteposuerit ullamcorper dolor. Legunt doming dignissim facer futurum quinta. Consuetudium ad magna tempor ut suscipit. Typi aliquam ex esse quarta qui.</p>
-			
-			<br />
-			
-			
-		</div>
-		
-		<div class="clear"></div>
-	</div>
-
-</body>
-
-</html>
+<div class="center jumbotron">
+	<h1>ALPHA BLOG</h1>
+	<%= link_to "Sign up now", "#", class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
